[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Pumidol Leelerdsakulvong <pumidol.l@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"
httpx = "^0.25.0"
pydantic = "^2.4.0"
python-dateutil = "^2.8.2"
pytest-xdist = "^3.5.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
